<resources>
    <string name="app_name">Daily Missions</string>
    <string name="email_hint">Email</string>
    <string name="login_text">Login</string>
    <string name="noAccount_text">Don\'t have an account?</string>
    <string name="register_text">Register</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="password_length">At least 6 characters</string>
    <string name="my_missions">My Missions</string>
</resources>